Reader: Fix Follow button alignment in full-post

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -107,7 +107,7 @@
 		}
 		.author-compact-profile__follow .follow-button {
 			position: fixed;
-			top: 15px;
+			top: 10px;
 			right: 180px;
 			z-index: z-index( '.masterbar', '.reader-profile' )
 		}
